Fixing notifiction spacing from the right edge.

--- a/eform-client/src/scss/styles.scss
+++ b/eform-client/src/scss/styles.scss
@@ -91,5 +91,5 @@ app-navigation mat-tree mat-nested-tree-node mat-accordion mat-expansion-panel m
 
 .toast-bottom-right {
   bottom: 0;
-  right: 0;
+  right: 7px;
 }
